:boom: Configuration suscriptions and deploy
